Completed "de-DE" locale (and fixed bugs in localization).

--- a/extension/chrome/locale/de-DE/pd-toolbar.dtd
+++ b/extension/chrome/locale/de-DE/pd-toolbar.dtd
@@ -1,8 +1,8 @@
 
-<!ENTITY pdToolbarLastSync      "Letzter Sync: ">
+<!ENTITY pdToolbarLastSync      "Letzter Abgleich: ">
 <!ENTITY pdToolbarLastReport    "Letzer Report: ">
 <!ENTITY pdToolbarLastReportDef "Letzter Report: ---">
 <!ENTITY pdToolbarTitle         "PhishDetect">
-<!ENTITY pdToolbarNodeSync      "Synchronisiere mit Knoten">
+<!ENTITY pdToolbarNodeSync      "Abgleich mit Knoten">
 <!ENTITY pdToolbarReporting     "Reports...">
-<!ENTITY pdToolbarPrefs         "Einstellungen">
+<!ENTITY pdToolbarPrefs         "Einstellungen...">
