--- a/extension/chrome/locale/de-DE/pd-check.dtd
+++ b/extension/chrome/locale/de-DE/pd-check.dtd
@@ -12,7 +12,7 @@
 <!ENTITY pdCheckImperson   "This website is impersonating the following brand:">
 <!ENTITY pdCheckIssues     "The following issues have been detected:">
 <!ENTITY pdCheckPreviewOn  "Zeige Voransicht">
-<!ENTITY pdCheckPreviewOf  "Verberge Voransicht">
+<!ENTITY pdCheckPreviewOff "Verberge Voransicht">
 <!ENTITY pdCheckError      "Sorry, the URL check service is not reachable or returned an error.">
 <!ENTITY pdCheckErrorMsg   "Make sure you are connected to the internet and that your PhishDetect node is available.">
 <!ENTITY pdCheckDetailsOn  "Zeige Details">
